  two step update is replaced with a five step update:  The background
  is updated as four rectangulear regions (leaving the previous text in
  place), then the new text is updated.  This eliminates the flicker
  (Petteri Aimonen).
* Kconfig: Many NxWidgets/NxWM settings do not have meaningful, generic
  default values.  Colors, for example, depend on pixel depth.  Some
  geometry settings depending on other geometry settings.  Font IDs are
  not know-able by the configuration system.  etc.  In these cases, it
  is best if the settings are just not undefined so that the system can
  calculate a reasonable default.  however, if no default is provided
  in the .config file, mconf will complain and generate errors.  So work
  around this, I added several "enabling" settings to override the
  default setting.  This is awkward and I preferred the configuration as
  it was before, but this avoids the mconf errors and warnings.
* UnitTests:  Changed occurrences of lib_rawprintf() and lib_lowprintf()
  to match recent changes to NuttX (will be in NuttX-6.25)
* CGraphicsPort::_drawText:  Renamed from CGraphicsPort::drawText in order
  to eliminate some naming collisions when overloaded in some configurations
  (i.e., when both bool and nx_pixel_t are uint8_t).  From Petteri Aimonen.
* CNxWidgets::drawContents: Change base drawContents from a do-nothing
  function to a function that fills the widget with the background color.
  This is useful when using CNxWidgets as a "panel" , i.e. a container
  for other widgets. Subclasses will override drawContents and decide
  themselves how to draw the background.
* CNxWidgets::CTabPanel:  A new widget contributed by Petteri Aimonen.
  This widget provides a tab panel, which has a button bar at the top
  and panels below it. Pressing a button will select the corresponding
  panel.

1.6 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

* Type of argv[] has changed from const char ** to char * const *
